edited html + css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Aurora-Project</title>
+    <title>Aurora Project</title>
   </head>
-  <body></body>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Northern Lights</title>
+      <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+      <header>
+        <!-- <div class="logo">
+      <a href="#"><img id="logo" src="./assets/logo.jpeg" alt="Logo"></a>
+    </div> -->
+
+        <section class="main-content">
+          <h1>Welcome to Project Aurora</h1>
+          <p>Explore the beauty of the aurora borealis.</p>
+        </section>
+      </header>
+
+      <div class="header-content">
+        <div class="search-box">
+          <input type="text" placeholder="Search for location" />
+          <button>Search</button>
+        </div>
+        <!-- <button class="right-button">Other Action</button> -->
+      </div>
+
+      <section>
+        <!-- Updated to use classes instead of id for containers -->
+        <div class="info-container">
+          <img src="./assets/logo.jpeg" alt="Northern Lights" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+            aspernatur corporis voluptates beatae doloremque rem deserunt! Nam
+            sequi quidem recusandae odit nobis deleniti ratione, consequatur
+            molestiae est, dignissimos omnis vero.
+          </p>
+        </div>
+
+        <div class="info-container">
+          <img src="./assets/logo.jpeg" alt="Aurora" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Consequuntur earum sequi sapiente? Qui omnis corrupti iusto nobis
+            culpa minima illo fugiat, alias hic in quod, error earum eius? Illo,
+            eum?
+          </p>
+        </div>
+
+        <div class="info-container">
+          <img src="./assets/logo.jpeg" alt="Aurora Landscape" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+            alias facere harum inventore at, autem debitis. Quod iure sed ipsum
+            quos quidem labore. Deserunt dolor at, quod modi vitae ex?
+          </p>
+        </div>
+      </section>
+
+      <footer id="footer">
+        <p>This is a group assignment at Kodehode by JobLoop</p>
+        <p>
+          Created by
+          <a href="https://github.com/mrhl082024" target="_blank">Lars Henrik</a
+          >,
+          <a href="https://github.com/Hea092024" target="_blank">Hector</a>,and
+          <a href="https://github.com/nilshenrikelde" target="_blank"
+            >Nils Henrik</a
+          >
+        </p>
+        <p>Copyright &copy; 2024. All rights reserved.</p>
+      </footer>
+    </body>
+  </html>
 </html>
