updated html + css with aurora info

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       </div>
     </div>
 
+    <section id="current-aurora" class="info-section">
+      <h2>Current Aurora Information</h2>
+      <div id="current-results" class="info-container">
+        <p>Results will appear here.</p>
+      </div>
+    </section>
+
     <section id="past-aurora" class="info-section">
       <h2>Aurora in the Last 7 Days</h2>
       <button id="past-btn">Check Past 7 Days</button>
