laget en liste over aurora lys, som også kan søkes i

--- a/test.html
+++ b/test.html
@@ -7,6 +7,11 @@
     <script type="module" src="test.js" defer></script>
 </head>
 <body>
-    <select name="" id="location-list"><option value="">-- select location --</option></select>
+<!-- <select name="" id="location-list"><option value=""> --select Country-- </option></select> -->
+<input list="location-list">
+<datalist id="location-list">
+
+</datalist>  
+
 </body>
 </html>
