ryddet kode. gjort koden mer universal

--- a/test.html
+++ b/test.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <!-- <select name="" id="location-list"><option value=""> --select Country-- </option></select> -->
-<input list="location-list">
-<datalist id="location-list">
 
+<select name="location-list" id="location-list"></select>
+<button id="test">test</button>
 </datalist>  
 
 </body>
