ferdig for idag

--- a/test.html
+++ b/test.html
@@ -11,6 +11,11 @@
 
 <select name="location-list" id="location-list"></select>
 <button id="test">test</button>
+<div id="kp-verdier"></div>
+<div><h1>Punktene er lagt med 3t intervaller</h1></div>
+<!-- <div id="kp-verdier-24"></div> -->
+<ol id="kp-verdier-24"></ol>
+
 </datalist>  
 
 </body>
